# iCEFARM

./: .dockerignore  .gitignore  Database.py  Device.py  DeviceManager.py  README.md  client.py  command_generators.py  pyproject.toml  requirements.txt  server.py  usbipicecl.py  utils.py  worker.py
.github/workflows/: docker.yml  test.yml  upload.yml
client/: Client.py  ControlAPI.py  DeviceUtils.py  EventHandler.py  EventServer.py  FirmwareFlasher.py  TimeoutDetector.py  _cli.py  cli.py  client.py
client/base/: usbip.py
client/drivers/usbip/: UsbipClient.py  UsbipHandler.py  __init__.py
client/lib/: AbstractEventHandler.py  BaseAPI.py  EventServer.py  __init__.py
client/util/: DefaultEventHandler.py  __init__.py
control/: ControlDatabase.py  HeartbeatDatabase.py  ServerDatabase.py  __init__.py  heartbeat.py  server.py
control-server/: heartbeat.py  requirements.txt  server.py
control/flyway/migrations/: V1.3__ReservationProc.sql
deploy/: Dockerfile  test_compose.yml
docker/: Dockerfile  compose-nodb.yml  compose.yml
examples/: README.md
examples/basic/: main.py
examples/firmware/flash/: README.md  main.py
examples/pulse_count/: main.py
examples/pulse_count_driver/: main.py
examples/pulse_count_usbip/: main.py
firmware/: main.c
flyway/migrations/: V1.3__ReservationProc.sql
src/usbipice/: __init__.py
utils/: DeviceEventSender.py  FirmwareFlasher.py  NotificationSender.py  __init__.py  dev.py  usbip.py  utils.py
worker/: Device.py  DeviceManager.py  WorkerDatabase.py  utils.py  worker.py
worker/device/: Device.py  DeviceManager.py
(+71 files in other folders)
