[project]
name = "usbipice"
version = "0.1"
dependencies = [
    "Flask",
    "pexpect",
    "psycopg[binary]",
    "pyudev",
    "requests",
    "schedule",
    "waitress"
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project.scripts]
worker = "worker:worker.main"
control = "control:server.main"
usbipconnect = "client:cli.main"
heartbeat = "control:heartbeat.main"

[tool.setuptools]
packages = ["client", "worker", "control", "utils"]

